--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">hotels_test_task</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="hotel">Отель</string>
+    <string name="booking">Бронирование</string>
+    <string name="order_paid">Заказ оплачен</string>
 </resources>
